<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">FinTik</string>
    <string name="welcome">Welcome!</string>
    <string name="enter_your_pin">Enter your PIN</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="create_account">Create Account</string>
    <string name="forget_password">Forget Password</string>
    <string name="login">login</string>
    <string name="please_enter_your_mobile_phone_email"><![CDATA[Please enter your mobile phone & email]]></string>
    <string name="we_ll_use_your_mobile_phone_and_e_mail_to_send_you_the_activation_code_for_this_application" tools:ignore="StringEscaping">We'll use your mobile phone and e-mail to send you the activation code for this application.</string>
    <string name="phone_number">Phone Number</string>
    <string name="e_mail">E-mail</string>
    <string name="next">Next</string>
    <string name="confirmation_code_has_been_sent_to_your_mobile_and_e_mail">Confirmation code has been sent to your mobile and e-mail</string>
    <string name="the_code_has_been_sent_to_phone_number_and_second_portion_to_email_please_enter_the_code_below">The code has been sent to phone number and second portion to Email. Please enter the code below.</string>
    <string name="confirm_code">___ ___ ___   ___ ___ ___</string>
    <string name="resend_code_again">Resend Code Again</string>
    <string name="we_need_you_to_take_a_picture_of_your_id_document_please_select_the_type_of_document_you_wish_to_scan_and_tap_to_begin">We need you to take a picture of your ID document. Please select the type of document you wish to scan and tap to begin.</string>
    <string name="scan">Scan</string>
    <string name="prepare_your_id_document_for_scan">Prepare your ID document for scan</string>
    <string name="personal_information">Personal Information</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="id">ID</string>
    <string name="set_your_password">Set your Password</string>
    <string name="set_your_password_with_minimum_6_characters_with_at_least_1_capital_letter_1_lower_letter_1_number_and_1_symbol">Set your password with minimum 6 characters with at least 1 capital letter,1 Lower letter, 1 number and 1 symbol.</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
</resources>