<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    tools:context=".Login">
<RelativeLayout
    android:layout_width="362dp"
    android:layout_height="600dp"
    android:background="@drawable/frame1"
    android:layout_marginTop="70dp"
    android:layout_marginRight="26dp"
    android:layout_marginLeft="26dp"
    android:layout_marginBottom="36dp"
    android:layout_gravity="center"
   >

    <TextView
        android:layout_width="248dp"
        android:layout_height="74dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="57dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="510dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/Gray"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtEnterPIN"
        android:layout_width="340dp"
        android:layout_height="62dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="157dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="373dp"
        android:background="@drawable/field1"
        android:hint="@string/enter_your_pin"
        android:fontFamily="@font/montserrat"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry,TextFields"
        android:autofillHints="@string/enter_your_pin"
        android:inputType="number" />

    <EditText
        android:id="@+id/txtEnterPassword"
        android:layout_width="340dp"
        android:layout_height="62dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="247dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="283dp"
        android:fontFamily="@font/montserrat"
        android:background="@drawable/field1"
        android:hint="@string/enter_your_password"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry"
        android:inputType="textPassword"
        android:autofillHints="@string/enter_your_password" />

    <TextView
        android:id="@+id/txtCreateAccount"
        android:layout_width="242dp"
        android:layout_height="24dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="355dp"
        android:layout_marginEnd="33dp"
        android:textSize="14sp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:textColor="@color/Gray"
        android:text="@string/create_account"/>
    <TextView
        android:id="@+id/txtForgetPassword"
        android:layout_width="81dp"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="390dp"
        android:layout_marginEnd="33dp"
        android:fontFamily="@font/montserrat"
        android:textSize="12sp"
        android:gravity="center"
        android:textColor="@color/Gray"
        android:text="@string/forget_password"/>


    <Button
        android:id="@+id/btLogin"
        android:layout_width="242dp"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="470dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/button1"
        android:text="@string/login"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/Gray"
        android:drawableEnd="@drawable/ic_arrow_"
        android:textSize="14sp"  />

</RelativeLayout>

</LinearLayout>