<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    tools:context=".PersonalInfo_SingUp">
    <RelativeLayout
        android:layout_width="362dp"
        android:layout_height="600dp"
        android:background="@drawable/frame1"
        android:layout_marginTop="70dp"
        android:layout_marginRight="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginBottom="36dp"
        android:layout_gravity="center"
        >


        <TextView
            android:layout_width="260dp"
            android:layout_height="74dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="48dp"
            android:layout_marginTop="29dp"
            android:layout_marginEnd="52dp"
            android:layout_marginBottom="501dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:text="@string/personal_information"
            android:textColor="@color/Black_Title"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
            android:id="@+id/txtFirstName"
            android:layout_width="340dp"
            android:layout_height="62dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="12dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="5dp"
            android:autofillHints="@string/first_name"
            android:background="@drawable/field1"
            android:fontFamily="@font/montserrat"
            android:hint="@string/first_name"
            android:paddingStart="10dp"
            tools:ignore="ObsoleteLayoutParam,RtlSymmetry,TextFields" />

        <TextView
            android:id="@+id/txtLastName"
            android:layout_width="340dp"
            android:layout_height="62dp"
            android:layout_marginStart="10dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="5dp"
            android:autofillHints="@string/last_name"
            android:background="@drawable/field1"
            android:fontFamily="@font/montserrat"
            android:hint="@string/last_name"
            android:paddingStart="10dp"
            tools:ignore="ObsoleteLayoutParam,RtlSymmetry" />

        <TextView
            android:id="@+id/txtStreet"
            android:layout_width="340dp"
            android:layout_height="62dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="5dp"
            android:autofillHints="@string/street"
            android:background="@drawable/field1"
            android:fontFamily="@font/montserrat"
            android:hint="@string/street"
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/txtCity"
            android:layout_width="340dp"
            android:layout_height="62dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="5dp"
            android:autofillHints="@string/city"
            android:background="@drawable/field1"
            android:fontFamily="@font/montserrat"
            android:hint="@string/city"
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry" />
        <TextView
            android:id="@+id/txtCountry"
            android:layout_width="340dp"
            android:layout_height="62dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="5dp"
            android:autofillHints="@string/country"
            android:background="@drawable/field1"
            android:fontFamily="@font/montserrat"
            android:hint="@string/country"
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry" />
        <TextView
            android:id="@+id/txtDateOfBirth"
            android:layout_width="340dp"
            android:layout_height="62dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="5dp"
            android:autofillHints="@string/date_of_birth"
            android:background="@drawable/field1"
            android:fontFamily="@font/montserrat"
            android:hint="@string/date_of_birth"
            android:paddingStart="10dp"
            tools:ignore="ObsoleteLayoutParam,RtlSymmetry" />

        <TextView
            android:id="@+id/txtID"
            android:layout_width="340dp"
            android:layout_height="62dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="5dp"
            android:autofillHints="@string/id"
            android:background="@drawable/field1"
            android:fontFamily="@font/montserrat"
            android:hint="@string/id"
            android:paddingStart="10dp"
            tools:ignore="ObsoleteLayoutParam,RtlSymmetry" />

        <Button
            android:id="@+id/btNext3"
            android:layout_width="242dp"
            android:layout_height="55dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="60dp"
            android:layout_marginTop="470dp"
            android:layout_marginEnd="60dp"
            android:background="@drawable/button1"
            android:text="@string/next"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/Gray"
            android:drawableEnd="@drawable/ic_arrow_"
            android:textSize="14sp"
            tools:ignore="ObsoleteLayoutParam" />
        </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</LinearLayout>