<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    tools:context=".SetPassword_SingUp">
    <RelativeLayout
        android:layout_width="362dp"
        android:layout_height="600dp"
        android:background="@drawable/frame1"
        android:layout_marginTop="70dp"
        android:layout_marginRight="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginBottom="36dp"
        android:layout_gravity="center"
        >


        <TextView
            android:layout_width="309dp"
            android:layout_height="44dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="29dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="527dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:text="@string/set_your_password"
            android:textColor="@color/Black_Title"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="96dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="78dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="425dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:text="@string/set_your_password_with_minimum_6_characters_with_at_least_1_capital_letter_1_lower_letter_1_number_and_1_symbol"
            android:textColor="@color/Light_Gray"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="340dp"
            android:layout_height="62dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="324dp"
            android:autofillHints="@string/enter_password"
            android:background="@drawable/field1"
            android:fontFamily="@font/montserrat"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry,TextFields" />

        <EditText
            android:id="@+id/txtConfirmPassword"
            android:layout_width="340dp"
            android:layout_height="62dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="267dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="244dp"
            android:autofillHints="@string/confirm_password"
            android:background="@drawable/field1"
            android:fontFamily="@font/montserrat"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry,TextFields" />

        <Button
            android:id="@+id/btSubmit"
            android:layout_width="242dp"
            android:layout_height="55dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="60dp"
            android:layout_marginTop="470dp"
            android:layout_marginEnd="60dp"
            android:background="@drawable/button1"
            android:text="@string/submit"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/Gray"
            android:textSize="14sp"  />

    </RelativeLayout>
</LinearLayout>