<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    tools:context=".ScanID_SignUp">
    <RelativeLayout
        android:layout_width="362dp"
        android:layout_height="600dp"
        android:background="@drawable/frame1"
        android:layout_marginTop="70dp"
        android:layout_marginRight="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginBottom="36dp"
        android:layout_gravity="center"
        >


        <TextView
            android:layout_width="260dp"
            android:layout_height="74dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="48dp"
            android:layout_marginTop="29dp"
            android:layout_marginEnd="52dp"
            android:layout_marginBottom="501dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:text="@string/prepare_your_id_document_for_scan"
            android:textColor="@color/Black_Title"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="111dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="390dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:text="@string/we_need_you_to_take_a_picture_of_your_id_document_please_select_the_type_of_document_you_wish_to_scan_and_tap_to_begin"
            android:textColor="@color/Light_Gray"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="81dp"
            android:layout_marginEnd="81dp"
            android:layout_marginBottom="160dp"
            android:background="@drawable/frame2"
            android:src="@drawable/scan"
            android:contentDescription="@string/scan" />

        <Button
            android:id="@+id/btScan1"
            android:layout_width="242dp"
            android:layout_height="55dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="60dp"
            android:layout_marginTop="470dp"
            android:layout_marginEnd="60dp"
            android:background="@drawable/button1"
            android:text="@string/scan"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/Gray"
            android:drawableEnd="@drawable/ic_arrow_"
            android:textSize="14sp"  />

    </RelativeLayout>
</LinearLayout>